# collector-swapi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
starwars/: settings.py  urls.py
swapi/: forms.py  models.py  urls.py  views.py
swapi/migrations/: 0001_initial.py
templates/swapi/: base.html  index.html  list.html  list_base.html  value_count.html
